Fix text overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,6 @@ section {
 }
 
 .mainContent {
-  justify-content: flex-start;
   align-items: flex-start;
 }
 
